# baxter

./: README.md  baxter.sh  demo  passing  record_2  record_test
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/baxter_core_msgs/: AnalogOutputCommand.h  AssemblyState.h  CameraControl.h  CameraSettings.h  CollisionDetectionState.h  EndEffectorState.h  EndpointStates.h  HeadPanCommand.h  ITBState.h  ITBStates.h  ListCameras.h  ListCamerasResponse.h  NavigatorStates.h  OpenCamera.h  OpenCameraRequest.h  SEAJointState.h  SolvePositionIKResponse.h
devel/include/baxter_interface/: PositionJointTrajectoryActionServerConfig.h
devel/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareEnable.h  UpdateSources.h  UpdateStatus.h
devel/lib/baxter_examples/: baxter_intro_demo
devel/lib/pkgconfig/: atlas_moveit_config.pc  atlas_v3_moveit_config.pc  baxter_core_msgs.pc  baxter_description.pc  baxter_examples.pc  baxter_ikfast_left_arm_plugin.pc  baxter_ikfast_right_arm_plugin.pc  baxter_interface.pc  baxter_maintenance_msgs.pc  baxter_moveit.pc  baxter_moveit_config.pc  baxter_tools.pc  clam_moveit_config.pc  iri_wam_moveit_config.pc  r2_moveit_generated.pc
install/: _setup_util.py  setup.sh
install/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AssemblyStates.h  CloseCamera.h  EndpointState.h  (+13 more)
src/: .rosinstall  .rosinstall.bak
src/baxter_examples/: CMakeLists.txt
src/baxter_examples/example_faces/: frown.xcf  laugh.xcf  neutral.xcf  sad.xcf  smile.xcf  surprised.xcf
src/baxter_examples/src/: baxter_intro_demo.cpp
(+86 files in other folders)
